--- a/NotificationSystem_RabbitMQ/appsettings.json
+++ b/NotificationSystem_RabbitMQ/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMQ": {
+    "URL": "amqps://rpjhbfsm:ueK0C5Kll6Ji4b2Oq5fByRFMzGe6pCxv@shrimp.rmq.cloudamqp.com/rpjhbfsm"
+  }
 }
